[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/environment/Objects/statue_ohne_s√§ule.png" type="Texture" id=1]
[ext_resource path="res://src/Scripts/InteractiveObjects/Obilisk.gd" type="Script" id=2]
[ext_resource path="res://assets/environment/props/obelisk_eye.png" type="Texture" id=3]
[ext_resource path="res://assets/Licht assets/rotes licht.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/player/shadow.png" type="Texture" id=5]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 172.913, 69.0616 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 265.285, 123.966 )

[sub_resource type="CanvasItemMaterial" id=3]

[node name="Obilisk" type="KinematicBody2D"]
z_index = 30
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="shadow" type="Sprite" parent="."]
modulate = Color( 0.968627, 0.254902, 0.839216, 1 )
position = Vector2( 0, 4.48981 )
scale = Vector2( 1.90741, 1.90741 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -257.196 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.45212, 0.125786 )
shape = SubResource( 1 )

[node name="Ditection" type="Area2D" parent="." groups=[
"Obilisk",
]]
position = Vector2( 0, -81.9627 )
collision_layer = 0
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ditection"]
position = Vector2( 0, 33.8541 )
shape = SubResource( 2 )

[node name="obelisk_eye" type="Sprite" parent="."]
visible = false
position = Vector2( -0.320435, -256.297 )
texture = ExtResource( 3 )

[node name="obelisk_eye_red" type="Sprite" parent="."]
visible = false
material = SubResource( 3 )
position = Vector2( 3.0455, -362.508 )
scale = Vector2( 0.195423, 0.195423 )
texture = ExtResource( 4 )

[node name="OnPlayerEnters" type="Label" parent="."]
margin_left = -35.6851
margin_top = 62.6829
margin_right = 4.31494
margin_bottom = 76.6829
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Ditection" to="." method="_on_Ditection_body_entered"]
[connection signal="body_exited" from="Ditection" to="." method="_on_Ditection_body_exited"]
